implement all done, done and CSRF

--- a/views/index.jade
+++ b/views/index.jade
@@ -10,5 +10,11 @@ block content
         a(href="/tasks") Todo List
       li
         a(href="/tasks") Completed
-
+  .home
+    p This is an example of classical (no front-end JavaScript framewors) web application built with Express.js 3.3.5 for 
+      a(href="http://expressjsguide.com") Express.js Guide
+      |.
+    p The full source code is available at 
+      a(href='http://github.com/azat-co/todo-express') github.com/azat-co/todo-express
+      |.
 
