--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,7 @@ html
     title= title + ' | ' + appname
     link(rel="stylesheet", href="/stylesheets/style.css")
     link(rel="stylesheet", href="/less/bootstrap.css")
-    link(rel="stylesheet", href="/less/main.css")
+    link(rel="stylesheet", href="/stylesheets/main.css")
 
   body
     .container
